force-app/main/default/objects/OrderItem/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Percentage discount applied to this order line. Copied from the source QuoteLineItem when created via the Create Sales Order modal, editable by the Sales Executive.</description>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>