force-app/main/default/objects/OrderItem/fields/Product_Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Detailed_Description__c</fullName>
    <label>Product Detailed Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>