force-app/main/default/objects/OrderItem/fields/SAP_OrderItem_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_OrderItem_Id__c</fullName>
    <description>SAP-side Order Item Id. Unique External Id used to resolve OrderItem from incoming SAP invoice line items (Invoice_Item__c.OrderItemId__c -&gt; this field).</description>
    <externalId>true</externalId>
    <label>SAP Order Item Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>