force-app/main/default/objects/OrderItem/fields/Source_Pricebook_Ref__c.field-meta.xml
<CustomField>
    <fullName>Source_Pricebook_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Pricebook that provided the auto-selected price for this line item</description>
    <label>Source Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products_Source</relationshipName>
    <type>Lookup</type>
</CustomField>